# snark-verifier

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yaml
examples/: evm-verifier-codegen.rs  evm-verifier-with-accumulator.rs  evm-verifier.rs
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml  README.md
snark-verifier-sdk/benches/: standard_plonk.rs
snark-verifier-sdk/configs/: bench_zkevm.json  bench_zkevm_plus_state.json  example_evm_accumulator.json
snark-verifier-sdk/examples/: StandardPlonkVerifierExample.sol  standard_plonk.rs
snark-verifier-sdk/src/: evm.rs  halo2.rs  lib.rs
snark-verifier-sdk/src/halo2/: aggregation.rs
snark-verifier/examples/: evm-verifier-with-accumulator.rs  evm-verifier.rs
snark-verifier/src/: cost.rs  lib.rs  loader.rs  pcs.rs  system.rs  util.rs  verifier.rs
snark-verifier/src/loader/: evm.rs  halo2.rs  native.rs
snark-verifier/src/loader/evm/: code.rs  loader.rs  test.rs  util.rs
snark-verifier/src/loader/evm/test/: tui.rs
snark-verifier/src/loader/evm/util/: executor.rs
snark-verifier/src/loader/halo2/: loader.rs  shim.rs  test.rs
snark-verifier/src/pcs/: ipa.rs  kzg.rs
snark-verifier/src/pcs/ipa/: accumulation.rs  accumulator.rs  decider.rs  multiopen.rs
snark-verifier/src/pcs/ipa/multiopen/: bgh19.rs
snark-verifier/src/pcs/kzg/: accumulation.rs  accumulator.rs  decider.rs
snark-verifier/src/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs
snark-verifier/src/system/: halo2.rs
snark-verifier/src/system/halo2/: strategy.rs  test.rs  transcript.rs
snark-verifier/src/system/halo2/test/: ipa.rs  kzg.rs
snark-verifier/src/system/halo2/test/circuit/: maingate.rs  standard.rs
snark-verifier/src/system/halo2/test/ipa/: native.rs
snark-verifier/src/system/halo2/test/kzg/: evm.rs  halo2.rs  native.rs
snark-verifier/src/system/halo2/transcript/: evm.rs  halo2.rs
snark-verifier/src/util/: arithmetic.rs  hash.rs  msm.rs  poly.rs  protocol.rs  transcript.rs
snark-verifier/src/util/hash/: poseidon.rs
snark-verifier/src/verifier/: plonk.rs
snark-verifier/src/verifier/plonk/: proof.rs  protocol.rs
src/: lib.rs  loader.rs  pcs.rs  protocol.rs  system.rs  transcript.rs  util.rs  verifier.rs
src/loader/: evm.rs  halo2.rs  native.rs
src/loader/evm/: accumulation.rs  code.rs  decider.rs  loader.rs  test.rs  transcript.rs  util.rs
src/loader/evm/test/: tui.rs
src/loader/evm/util/: executor.rs
src/loader/halo2/: accumulation.rs  loader.rs  shim.rs  test.rs  transcript.rs
src/loader/native/: accumulation.rs  loader.rs
src/pcs/: kzg.rs
src/pcs/ipa/: accumulator.rs  multiopen.rs
src/pcs/ipa/multiopen/: bgh19.rs
src/pcs/kzg/: accumulation.rs  accumulator.rs  decider.rs  multiopen.rs  strategy.rs  variant.rs
src/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs
src/pcs/kzg/variant/: bdfg21.rs  gwc19.rs
src/protocol/: halo2.rs
src/protocol/halo2/: test.rs  transcript.rs  util.rs  verifier.rs
src/protocol/halo2/test/: circuit.rs  evm.rs  halo2.rs  kzg.rs  native.rs
src/protocol/halo2/test/circuit/: maingate.rs  plookup.rs  standard.rs
src/protocol/halo2/test/kzg/: evm.rs  halo2.rs  native.rs
src/protocol/halo2/transcript/: evm.rs
src/protocol/halo2/util/: evm.rs  halo2.rs
src/protocol/halo2/verifier/: kzg.rs  shplonk.rs
src/protocol/halo2/verifier/kzg/: plonk.rs  shplonk.rs
src/scheme/: kzg.rs
src/scheme/kzg/: accumulation.rs  accumulator.rs  cost.rs  decider.rs  msm.rs
src/scheme/kzg/accumulation/: plonk.rs  shplonk.rs
src/scheme/kzg/accumulator/: plonk.rs  shplonk.rs
src/system/: halo2.rs
src/system/halo2/: test.rs  transcript.rs
src/system/halo2/test/: circuit.rs  ipa.rs  kzg.rs
src/system/halo2/test/circuit/: maingate.rs  standard.rs
src/system/halo2/test/ipa/: native.rs
src/system/halo2/test/kzg/: evm.rs  halo2.rs  native.rs
src/system/halo2/transcript/: evm.rs  halo2.rs
src/system/halo2/util/: evm.rs  halo2.rs
src/util/: arithmetic.rs  expression.rs  hash.rs  loader.rs  msm.rs  protocol.rs  transcript.rs
src/util/hash/: poseidon.rs
src/util/loader/: evm.rs  native.rs
src/util/loader/evm/: tui.rs
src/verifier/: plonk.rs
